# technical_organization

./: .gitignore  README.md
1.embedded_series_based_on_stm32/: 01.综述和内核说明.md  02.RCC时钟模块.md  03.GPIO模块.md  04.EXTI外部中断模块.md  05.RTC定时器模块.md  06.DAC模块.md  07.ADC模块.md  08.USART模块.md  09.SPI通讯模块.md  10.I2C通讯.md  11.Timer定时器模块.md  12.Watchdog看门狗模块.md  13.DMA模块.md  14.SDIO接口模块.md  15.FSMC接口模块.md  16.算法模块.md  17.ETH模块和以太网通讯.md  document.drawio  global.drawio
1.从STM32去系统讲述单片机技术/: 01.综述和内核说明.md  02.RCC时钟模块.md  03.GPIO模块.md  04.EXTI外部中断模块.md  05.RTC定时器模块.md  06.DAC模块.md  07.ADC模块.md  08.USART模块.md  09.SPI通讯模块.md  10.I2C通讯.md  11.Timer定时器模块.md  12.看门狗模块.md  13.DMA模块说明.md  13.ETH模块和以太网通讯.md  14.SDIO接口.md  17.算法模块.md  21.ETH模块和以太网通讯.md
2.Makefile知识总结学习/: makefile使用说明.md
2.Makefile知识总结学习/test/: Makefile  application.cpp  main.c  target
3.IAP的原理和实现/: IAP的工作原理.md
4.MDK增加芯片支持(Cortex-M系列)/: 如何使用MDK增加Cortex-M芯片支持.md
micropython/: README.md
micropython/ports-unix/: modpydev.c  modpyled.c
python/other/: bmp_CArray.py  count.py
python/python-book-1/: Capture1-basic.py  Capture2-basy_type.py
python/python-flv/: audio_parser.py  flv.py  start.py
rust/: README.md
rust/other/time_manage/: Cargo.toml
rust/other/time_manage/src/: main.rs  module.rs
rust/other/time_manage/src/module/: month.rs  time.rs
weather/: .gitignore  README.md  config.json.example  killApp  preRunScript.sh  startApp
weather/document/: design.drawio
weather/weather_request/: README.md  bash_run.py  device.py  global_config.py  mqtt_publish.py  weather.py
web/Basic/: basis.html  frame.html  (+1 more)
(+142 files in other folders)
