[package]
name = "time_manage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.41"
date_time = "2.1.1"
regex = "0.1"
chrono = { version = "0.4", feature = ["serde", "rustc-serialize"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3